--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <div class="carousel-item">
 
         <video controls autoplay muted loop playsinline poster="hoge.jpg" width="100%">
-          <source src="C:\Users\woodb\OneDrive\デスクトップ\2023素材例\ワイン.mp4" type="video/mp4">
+          <source src="2023素材例\ワイン.mp4" type="video/mp4">
         </video>
         <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
 
@@ -109,7 +109,7 @@
       <div class="carousel-item">
 
         <video controls autoplay muted loop playsinline poster="hoge.jpg" width="100%">
-          <source src="C:\Users\woodb\OneDrive\デスクトップ\2023素材例\パスタ.mp4" type="video/mp4">
+          <source src="2023素材例\パスタ.mp4" type="video/mp4">
         </video>
 
         <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
