--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <!-- Three columns of text below the carousel -->
     <div class="row">
       <div class="col-lg-4">
-        <img src="C:\Users\woodb\OneDrive\デスクトップ\2023素材例\こだわり２キャンペーン.jpg" class="img-fluid" alt="">
+        <img src="2023素材例\こだわり２キャンペーン.jpg" class="img-fluid" alt="">
         
         <h2 class="space">お得なキャンペーンも定期的に開催！</h2>
         <p>1カ月ごとに季節に合わせたイベントも開催しています。</p>
@@ -151,14 +151,14 @@
         <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <img src="C:\Users\woodb\OneDrive\デスクトップ\bootstrap-5.0.2-examples\carousel\img\2023素材例\内装２.jpg" class="img-fluid" alt="">
+        <img src="2023素材例\内装２.jpg" class="img-fluid" alt="">
 
         <h2 class="space">居心地の良い店内</h2>
         <p>いつも笑顔が溢れる明るい店内です。初めての方もお気軽にお越しください。</p>
         <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <img src="C:\Users\woodb\Downloads\Firefly 子供がウェイトレスから誕生日ケーキを貰って喜んでいる写真 66439.jpg" class="img-fluid" alt="">
+        <img src="2023素材例\Firefly 子供がウェイトレスから誕生日ケーキを貰って喜んでいる写真 40822.jpg" class="img-fluid" alt="">
 
         <h2 class="space">誕生日のサプライズも大歓迎！！ケーキ持ち込み可能です。</h2>
         <p>女子会、記念日、友人とお気軽にどうぞ！！</p>
@@ -179,7 +179,7 @@
         <p class="lead">旬の美味しいお野菜、魚、お肉で美味しい料理を提供しております。毎日変わるおすすめメニューも大人気です。ワインと一緒にお楽しみ下さい。</p>
       </div>
       <div class="col-md-5">
-        <img src="C:\Users\woodb\OneDrive\デスクトップ\bootstrap-5.0.2-examples\carousel\img\2023素材例\こだわり１.jpg" class="img-fluid" alt="">
+        <img src="2023素材例\こだわり１.jpg" class="img-fluid" alt="">
 
       </div>
     </div>
@@ -194,7 +194,7 @@
         </div>
       </div>
       <div class="col-md-5 order-md-1">
-        <img src="C:\Users\woodb\OneDrive\デスクトップ\bootstrap-5.0.2-examples\carousel\img\2023素材例\ワイン２.jpg" class="img-fluid" alt="">
+        <img src="2023素材例\ワイン２.jpg" class="img-fluid" alt="">
 
       </div>
     </div>
@@ -207,7 +207,7 @@
         <p class="lead">お得なコースメニューは2980円から3種類ございます。飲み放題付きコースも人気です。女子会、お仲間とのご宴会におすすめです。</p>
       </div>
       <div class="col-md-5">
-        <img src="C:\Users\woodb\OneDrive\デスクトップ\bootstrap-5.0.2-examples\carousel\img\2023素材例\こだわり３コース料理.jpg" class="img-fluid" alt="">
+        <img src="2023素材例\こだわり３コース料理.jpg" class="img-fluid" alt="">
       </div>
     </div>
 
@@ -219,7 +219,7 @@
         <p class="lead">コスパ最高の美味しいワインを取り揃えております。日替わりグラスワインは580円〜美味しいワインを気軽にお楽しみください。ボトルワインも各種ご用意しております。</p>
       </div>
       <div class="col-md-5 order-md-1">
-        <img src="C:\Users\woodb\OneDrive\デスクトップ\2023素材例\こだわり２または４.jpg" class="img-fluid" alt="">
+        <img src="2023素材例\こだわり２または４.jpg" class="img-fluid" alt="">
 
       </div>
     </div>
@@ -232,7 +232,7 @@
         <p class="lead">ワインとチーズをお楽しみください。オーナーシェフが厳選した絶品チーズを使ったメニューも人気です。</p>
       </div>
       <div class="col-md-5">
-        <img src="C:\Users\woodb\OneDrive\デスクトップ\bootstrap-5.0.2-examples\carousel\img\2023素材例\ワインと人気メニュー.jpg" class="img-fluid" alt="">
+        <img src="2023素材例\ワインと人気メニュー.jpg" class="img-fluid" alt="">
       </div>
     </div>
 
@@ -244,7 +244,7 @@
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card h-100">
-          <img src="C:\Users\woodb\OneDrive\デスクトップ\2023素材例\豚カシラ肉の柔らかグリル.jpg" class="card-img-top" alt="...">
+          <img src="2023素材例\豚カシラ肉の柔らかグリル.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">豚カシラ肉の柔らかグリル</h5>
             <p class="card-text">ジューシーな豚カシラ肉を、にんにくバターと甘酢だれで煮込んで、ふっくらと仕上げました。口に入れると、肉の旨味と煮汁のコクが広がります。</p>
@@ -256,7 +256,7 @@
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="C:\Users\woodb\OneDrive\デスクトップ\2023素材例\こだわり１ (2).jpg" class="card-img-top" alt="...">
+          <img src="2023素材例\こだわり１.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">ターメリックキーマカレー</h5>
             <p class="card-text">旬の夏野菜をふんだんに使った、ヘルシーで栄養満点のキーマカレーです。ターメリックライスと一緒に食べれば、野菜の甘みとスパイスの風味が口いっぱいに広がります。</p>
@@ -268,7 +268,7 @@
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="C:\Users\woodb\OneDrive\デスクトップ\2023素材例\こだわり１絶品パスタ.jpg" class="card-img-top" alt="...">
+          <img src="2023素材例\こだわり１絶品パスタ.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">ウニクリームパスタ</h5>
             <p class="card-text">ウニクリームパスタは、海の恵みとクリーミーなソースの絶妙なハーモニーです。ふわふわのウニが舌の上でとろける感覚は、まるで夢のよう。パスタはもちもちとした食感で、ソースとよく絡みます。</p>
@@ -286,7 +286,7 @@
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card h-100">
-          <img src="C:\Users\woodb\OneDrive\デスクトップ\2023素材例\こだわり２.jpg" class="card-img-top" alt="...">
+          <img src="2023素材例\こだわり２.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">シーフードマリネ</h5>
             <p class="card-text">新鮮な海の幸と爽やかな酸味のマリネ液の相性抜群です。エビ、イカ、ムール貝などのシーフードがたっぷり入っていて、食べ応えも満点。マリネ液はレモンやワインビネガーで作られており、さっぱりとした味わいで、食欲をそそります。</p>
@@ -298,7 +298,7 @@
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="C:\Users\woodb\OneDrive\デスクトップ\2023素材例\パテドカンパーニュ.jpg" class="card-img-top" alt="...">
+          <img src="2023素材例\パテドカンパーニュ.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">パテドカンパーニュ</h5>
             <p class="card-text">パテドカンパーニュは、豚肉やレバーなどのひき肉に香草やスパイスを加えて焼いたフランスの郷土料理です。コクのある味わいとほろほろとした食感が特徴で、バゲットやサラダと一緒に楽しめます。</p>
@@ -310,7 +310,7 @@
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="C:\Users\woodb\OneDrive\デスクトップ\2023素材例\鴨むね肉のローストオレンジソース.jpg" class="card-img-top" alt="...">
+          <img src="2023素材例\鴨むね肉のローストオレンジソース.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">鴨むね肉のローストオレンジソース</h5>
             <p class="card-text">ジューシーな鴨肉と甘酸っぱいオレンジソースのコントラストが楽しめる一品です。鴨肉は低温でじっくりと焼き上げており、肉汁が溢れ出すほど柔らかく仕上がっています。</p>
@@ -328,7 +328,7 @@
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card h-100">
-          <img src="C:\Users\woodb\OneDrive\デスクトップ\2023素材例\トマトとモッツァレラチーズ.jpg" class="card-img-top" alt="...">
+          <img src="2023素材例\トマトとモッツァレラチーズ.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">トマトとモッツァレラチーズ</h5>
             <p class="card-text">イタリアの代表的なサラダであるカプレーゼの主役です。鮮やかな赤と白の色合いと、トマトの酸味とモッツァレラチーズのまろやかさが絶妙にマッチしています。トマトはリコピンやビタミンCなどの栄養素が豊富で、モッツァレラチーズはカルシウムやタンパク質がたっぷりです。</p>
@@ -340,7 +340,7 @@
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="C:\Users\woodb\OneDrive\デスクトップ\2023素材例\国産牛ローストビーフオニオンソース.jpg" class="card-img-top" alt="...">
+          <img src="2023素材例\国産牛ローストビーフオニオンソース.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">国産牛ローストビーフオニオンソース</h5>
             <p class="card-text">国産牛のローストビーフは、外は香ばしく、中はレアで柔らかく仕上げられています。オニオンソースは、玉ねぎの甘みと酢の酸味がバランスよく調和しており、ローストビーフの旨味を引き立てます。</p>
@@ -352,7 +352,7 @@
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="C:\Users\woodb\OneDrive\デスクトップ\2023素材例\国産牛ステーキ.jpg" class="card-img-top" alt="...">
+          <img src="2023素材例\国産牛ステーキ.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">国産牛ステーキ</h5>
             <p class="card-text">国産牛ステーキは、日本の最高級の肉を堪能できる逸品です。国産牛は、肉質が柔らかく、脂が甘く、香りが高いことで有名です。ステーキは、熱々の鉄板で焼き上げており、表面はカリッと、中はジューシーに仕上がっています。塩や胡椒、ソースなどでお好みの味付けをして、お肉の旨味を存分に味わってください。</p>
@@ -378,7 +378,7 @@
     <p>住所 〒999-999 奈良氏之市都田沼１２３</p>
 
     <p>電話番号 000-1234-5678</p>
-    <div class="itaria"><img src="C:\Users\woodb\OneDrive\デスクトップ\2023素材例\Firefly イタリアンとアルファベットのCをイメージしたロゴを作って 51448.jpg" width="100px;"  alt="..."> 
+    <div class="itaria"><img src="2023素材例\Firefly イタリアンとアルファベットのCをイメージしたロゴを作って 51448.jpg" width="100px;"  alt="..."> 
     </div>
 
   </footer>
